# genie-contracts

./: .gitignore  Cargo.toml  README.md  build.sh
contracts/airdrop/: Cargo.toml  README.md
contracts/airdrop-factory/: Cargo.toml  README.md
contracts/airdrop-factory/examples/: schema.rs
contracts/airdrop-factory/src/: contract.rs  crypto.rs  msg.rs
contracts/airdrop/schema/: instantiate_msg.json
contracts/airdrop/src/: contract.rs  crypto.rs  msg.rs  state.rs
contracts/genie-airdrop/: Cargo.toml  README.md
contracts/genie-airdrop-factory/: Cargo.toml  README.md
contracts/genie-airdrop-factory/examples/: schema.rs
contracts/genie-airdrop-factory/schema/: config.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/genie-airdrop-factory/src/: contract.rs  crypto.rs  msg.rs  state.rs
contracts/genie-airdrop/examples/: schema.rs
contracts/genie-airdrop/schema/: config.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  user_info.json
contracts/genie-airdrop/src/: contract.rs  crypto.rs  msg.rs  state.rs
contracts/genie-nft/: Cargo.toml
contracts/genie-nft/examples/: schema.rs
contracts/genie-nft/schema/: config.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  query_msg.json  user_info.json
contracts/genie-nft/src/: contract.rs  state.rs
contracts/genie-raffle/: Cargo.toml  README.md
contracts/genie-raffle/schema/: execute_msg.json
contracts/genie-raffle/src/: contract.rs  crypto.rs  state.rs
example/: schema.rs
scripts/: .gitignore  README.md  package.json
scripts/config/: .env.example  example.env
scripts/src/: creategenienftcampaign.ts  keygen.ts  localterra-nft-test.ts  localterra-test.ts  osmo-test.ts  sign.ts  terra-nft-upload.ts  test-raffle.ts  test.ts
