[workspace]
members = [
  "packages/genie",
  "contracts/genie-airdrop",
  "contracts/genie-nft",
  "contracts/genie-airdrop-factory",
]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
